fixed shadow on projects on mobile view

--- a/src/projects/Projects.css
+++ b/src/projects/Projects.css
@@ -26,7 +26,7 @@ img:hover {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
-  border-radius: 0 1rem 1rem 0;
+  border-radius: 0 0 1rem 1rem;
   box-shadow: 5px 10px 8px #888888;
 }
 
@@ -34,7 +34,7 @@ img:hover {
   flex: 1;
   padding: 1rem;
   background-color: #ffff;
-  border-radius: 0 1rem 1rem 0;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .projects-flex-2 {
@@ -49,7 +49,7 @@ img:hover {
 .project-screenshot {
   object-fit: cover;
   width: 100%;
-  height: 200px;
+  height: 250px;
 }
 
 @media all and (min-width: 800px) {
@@ -58,7 +58,14 @@ img:hover {
   }
   .projects-flex {
     flex-direction: row;
+  border-radius: 0 1rem 1rem 0;
+
   }
+
+  .projects-flex-1 {
+    border-radius: 0 1rem 1rem 0;
+  }
+
   .project-screenshot {
     object-fit: cover;
     width: 100%;
